added new program

--- a/JEE7REGPAGE/src/main/webapp/WEB-INF/web.xml
+++ b/JEE7REGPAGE/src/main/webapp/WEB-INF/web.xml
@@ -12,12 +12,23 @@
   
   
   <servlet-mapping>
-  <servlet-name>calling1</servlet-name>
-  <url-pattern>/Login-servlet</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-  <servlet-name>calling1</servlet-name>
-  <servlet-class>com.tap.Servlet1</servlet-class>
-  </servlet>
+    <servlet-name>calling1</servlet-name>
+    <url-pattern>/Login-servlet</url-pattern>
+</servlet-mapping>
+
+<servlet>
+    <servlet-name>calling1</servlet-name>
+    <servlet-class>com.tap.Servlet1</servlet-class>
+</servlet>
+
+<servlet-mapping>
+    <servlet-name>calling2</servlet-name>
+    <url-pattern>/Login-servlet1</url-pattern>
+</servlet-mapping>
+
+<servlet>
+    <servlet-name>calling2</servlet-name>
+    <servlet-class>com.tap.Servlet2</servlet-class>
+</servlet>
+
 </web-app>
